# ixos-cli

./: Cargo.toml  LICENSE
scripts/: install.ps1  install.sh
src/: capabilities.rs  diagnostics.rs  entitlements.rs  journalist_mode.rs  lib.rs  main.rs  pro.rs
src/activity_ledger/: co_occurrence.rs  mod.rs  storage.rs
src/attestation/: mod.rs
src/cli/: commands.rs  config.rs  mod.rs  output.rs  self_update.rs
src/compliance/: audit.rs  ccpa.rs  consent.rs  documentation.rs  gdpr.rs  mod.rs  search_history.rs  storage.rs  transparency.rs  types.rs
src/daemon/: config.rs  ipc.rs  mod.rs  service.rs
src/instrumentation/: metrics.rs  mod.rs  profile.rs  reporter.rs  sampler.rs  spans.rs
src/integrations/: academic.rs  mod.rs
src/ixos_embed/: augmented.rs  background_indexer.rs  chunker.rs  memory_protection.rs  mmap_model.rs  mod.rs  model.rs  model2vec.rs  prefetcher.rs  secure_embedder.rs
src/ixos_rank/: candidate_lexical.rs  fstd.rs  history.rs  hybrid_engine.rs  lexical_engine.rs  mod.rs  personal_ranker.rs  progressive.rs  secure_ranker.rs  semantic_engine.rs  snippet.rs  types.rs
src/ixos_rank/ask_mode/: anchor_extractor.rs  description_extractor.rs  intent_detector.rs  mod.rs  snippet_trust.rs
src/ixos_rank/candidate_generator/: document_engine.rs  metadata_priors.rs  mod.rs  path_engine.rs  query_preprocess.rs  ripgrep_funnel.rs  scorer.rs
src/ixos_rank/evidence/: chain.rs  directory_centroids.rs  explanation.rs  mod.rs  passage_extractor.rs  types.rs
src/ixos_watcher/: events.rs  mod.rs  resilience.rs
src/optimization/: mod.rs
src/parsers/: mod.rs
src/security/: crypto.rs  device_identity.rs  mod.rs  sandbox.rs  secure_store.rs
src/storage/: ads_windows.rs  cloud_detection.rs  mod.rs  null.rs  personal_ranking.rs  sidecar_lmdb.rs  validator.rs  xattr_unix.rs
src/telemetry/: mod.rs
src/workstreams/: mod.rs  storage.rs
