
[package]
name = "ixos-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Ixos Team"]
description = "Privacy-first semantic file search with cross-platform caching"
license = "MIT"
repository = "https://github.com/IxosProtocol/ixos-cli"
keywords = ["search", "semantic", "privacy", "embeddings"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# Real embedding model - Model2Vec
model2vec-rs = "0.1.4"

# Async runtime
tokio = { version = "1.43", features = ["full", "time", "sync"] }

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Memory protection - secure memory zeroing
zeroize = { version = "1.7", features = ["derive"] }

# Half-precision floats for compact embedding storage
half = { version = "2.4", features = ["bytemuck"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and UUIDs (for compliance)
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config directory detection
dirs = "5.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# File system watching
notify = "6.1"
walkdir = "2.4"
glob = "0.3"

# Async traits
async-trait = "0.1"

# Config file parsing
toml = "0.8"

# Async utilities (CancellationToken for progressive search)
tokio-util = "0.7"

# System info for performance profiling
sysinfo = "0.32"

# Parallel processing
rayon = "1.10"

# LRU cache for embeddings and file content
lru = "0.12"

# Parking lot for efficient mutexes
parking_lot = "0.12"

# Regular expressions for snippet highlighting and word boundaries
regex = "1.10"

# SIMD accelerated vector similarity
simsimd = "5"

# Self-update: lightweight HTTP client, checksum verification, archive extraction
ureq = { version = "2", features = ["tls"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
tar = "0.4"

# Document parsing (evidence extraction)
pdf-extract = "0.7"
calamine = "0.24"
zip = "0.6"
quick-xml = "0.31"

# P1: Performance Revolution dependencies
# P1.1: Memory-mapped model loading
memmap2 = "0.9"

# P1.2: Ripgrep-style lexical funnel
grep-regex = "0.1"
grep-matcher = "0.1"
grep-searcher = "0.1"
ignore = "0.4"

# P1.4: LMDB sidecar cache
heed = "0.20"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Platform-specific: Windows ADS support and memory locking
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_Security_Credentials"] }

# Platform-specific: Unix xattr support and memory locking
[target.'cfg(unix)'.dependencies]
xattr = "1.3"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.15"
tokio-test = "0.4"

[[bin]]
name = "ixos"
path = "src/main.rs"

[[bin]]
name = "ixos-big-bench"
path = "src/bin/ixos-big-bench.rs"

[lib]
name = "ixos_protocol"
path = "src/lib.rs"

# Benchmark targets (P1)
[[bench]]
name = "candidate_generation"
harness = false

[[bench]]
name = "search_e2e"
harness = false

[[bench]]
name = "directory_centroids_boost"
harness = false




[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4.0", default-features = false, features = ["rt-tokio-crypto-rust"] }
zbus = { version = "4", features = ["tokio"] }
